[project]
name = "co2_ble_mqtt"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "jhumci", email = "julian.huber@mci.edu"},
]
dependencies = ["bluepy>=1.3.0", "paho-mqtt>=2.1.0"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
